# gmetric

./: AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: AreaCalculator.cpp  AreaCalculator.h  AreaCalculatorTest.h  MathFunctions.h  Metrics.cpp  Metrics.h  MetricsTest.h  NCFile.cpp  NCFile.h  NCGrid.cpp  NCGrid.h  NCGridTest.h  TArray.h  Vector2.h  Vector2Test.h  Vector3.h  Vector3Test.h  VolumeCalculator.cpp  VolumeCalculator.h  VolumeCalculatorTest.h  helper.h  helperTest.h  main.cpp
src/.deps/: AreaCalculator.Po  Metrics.Po  NCFile.Po  NCGrid.Po  VolumeCalculator.Po  main.Po
